<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>be.nbb.demetra</groupId>
    <artifactId>demetra-dotstat-core</artifactId>
    <version>2.2.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    
    <name>Demetra - DotStat - Core</name>
    <description>DotStat extension for JDemetra+</description>

    <organization>
        <name>National Bank of Belgium</name>
    </organization>
    <url>https://github.com/nbbrd/jdemetra-dotstat</url>
    <licenses>
        <license>
            <name>European Union Public Licence (EUPL)</name>
            <url>https://joinup.ec.europa.eu/software/page/eupl/licence-eupl</url>
        </license>
    </licenses>

    <properties>
        <!-- build -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>1.8</jdk.version>
        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
        <!-- dependencies -->
        <demetra.version>2.2.0-RC2</demetra.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>eu.europa.ec.joinup.sat</groupId>
                <artifactId>demetra-parent</artifactId>
                <version>${demetra.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- compile only -->
        <dependency>     
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util-lookup</artifactId>
            <scope>provided</scope>
        </dependency>
        <!-- compile and runtime -->
        <dependency>
            <groupId>be.nbb.sdmx</groupId>
            <artifactId>sdmx-facade-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>be.nbb.sdmx</groupId>
            <artifactId>sdmx-facade-util</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>be.nbb.sdmx</groupId>
            <artifactId>sdmx-facade-connectors</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>be.nbb.sdmx</groupId>
            <artifactId>sdmx-facade-file</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sat</groupId>
            <artifactId>demetra-jdbc</artifactId>
        </dependency>
        <!-- test only -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sat</groupId>
            <artifactId>demetra-tck</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sat</groupId>
            <artifactId>demetra-sdmx</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>be.nbb.sdmx</groupId>
            <artifactId>sdmx-facade-samples</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <repositories>
        <repository>
            <id>netbeans</id>
            <url>http://bits.netbeans.org/maven2/</url>
        </repository>        
        <repository>
            <id>joinup-releases</id>
            <url>https://joinup.ec.europa.eu/nexus/content/repositories/releases/</url>
        </repository>
    </repositories>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>    
</project>